--- a/index.css
+++ b/index.css
@@ -1,13 +1,5 @@
-@font-face {
-  font-family: "Saitamaar";
-  src: url("https://fonts-aahub.netlify.com/assets/fonts/Saitamaar/Saitamaar.woff2") format("woff2"),
-    url("https://fonts-aahub.netlify.com/assets/fonts/Saitamaar/Saitamaar.woff") format("woff"),
-    url("https://fonts-aahub.netlify.com/assets/fonts/Saitamaar/Saitamaar.ttf") format("ttf");
-  font-display: swap;
-}
-
 .AAFont-pre {
-  font-family: "Saitamaar";
+  font-family:"ＭＳ Ｐゴシック","MS PGothic","Mona","mona-gothic-jisx0208.1990-0",sans-serif;
   white-space: pre;
   font-size: 16px;
   line-height: 18px;
