--- a/index.css
+++ b/index.css
@@ -1,7 +1,12 @@
-.AAFont-pre {
+.AAFont-pre
+{
   font-family:"ＭＳ Ｐゴシック","MS PGothic","Mona","mona-gothic-jisx0208.1990-0",sans-serif;
   white-space: pre;
   font-size: 16px;
   line-height: 18px;
-  margin: 0 auto;
+}
+
+.AAcontainer
+{
+ margin: 0 auto;  
 }
