--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
   margin: 0 20px;
 }
 
-.kadomatsu
+.kadomatsu-left
 {
   font-family:"ＭＳ Ｐゴシック","MS PGothic","Mona","mona-gothic-jisx0208.1990-0",sans-serif;
   white-space: pre;
@@ -16,6 +16,16 @@
   line-height: 18px;  
   width:100px;
   float:left;
+}
+
+.kadomatsu-right
+{
+  font-family:"ＭＳ Ｐゴシック","MS PGothic","Mona","mona-gothic-jisx0208.1990-0",sans-serif;
+  white-space: pre;
+  font-size: 16px;
+  line-height: 18px;  
+  width:100px;
+  float:right;
 }
 
 .AAContainer
