--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
   white-space: pre;
   font-size: 8px;
   line-height: 9px;
-  width:400px;
+  width:70%;
   margin: 0 auto;
   float:left;
 }
@@ -15,7 +15,7 @@
   white-space: pre;
   font-size: 16px;
   line-height: 18px;  
-  width:80px;
+  width:15%;
   float:left;
 }
 
@@ -25,7 +25,7 @@
   white-space: pre;
   font-size: 16px;
   line-height: 18px;  
-  width:80px;
+  width:15%;
   float:left;
 }
 
